# backend/docs/swagger.yaml
@@ -40,6 +40,8 @@ definitions:
         type: integer
       economyPrice:
         type: integer
+      flightScheduleCode:
+        type: string
       flightScheduleID:
         type: integer
       originAirport:
@@ -283,6 +285,70 @@ paths:
       summary: Get plane by airline
       tags:
       - Plane
+  /flight-transaction:
+    post:
+      consumes:
+      - application/json
+      description: Add a new flight transaction
+      parameters:
+      - description: Flight Transaction
+        in: body
+        name: flightTransaction
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Flight Transaction created successfully!
+          schema:
+            type: string
+      summary: Add flight transaction
+      tags:
+      - Flight Transaction
+  /flight-transaction/user/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get flight transaction by user id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Flight Transaction found successfully!
+          schema:
+            type: string
+      summary: Get flight transaction by user id
+      tags:
+      - Flight Transaction
+  /flight-transaction/user/total/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get total flight transaction by user id
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Flight Transaction found successfully!
+          schema:
+            type: string
+      summary: Get total flight transaction by user id
+      tags:
+      - Flight Transaction
   /flight/airport:
     get:
       consumes:
